--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 .header .right{
     width: 50%;
     height:100%;
-    background-color: brown;
+    background-color: #fff;
     position: absolute;
     right: 0;
 }
@@ -40,7 +40,7 @@ body{
 .section1 .right{
     width: 50%;
     height: 100%;
-    background-color: burlywood;
+    background-color: #282A35;
     position: absolute;
     right:0;
 }
@@ -56,6 +56,7 @@ body{
     position: absolute;
     right: 0;
 }
+.icons{}
 .logo img{
     display: block;
     width: 50%;
@@ -70,6 +71,10 @@ body{
     font-weight: bold;
     font-size: 18px;
     padding: 30px 15px;
+}
+.menu li:hover{
+    background-color: #04aa6d;
+    color: #fff;
 }
 .title{
     font-size: 110px;
@@ -96,6 +101,12 @@ body{
 .btn2{
     background-color: #fff;
 }
+.btn1:hover{
+    background-color: #04774d;
+}
+.btn2:hover{
+    background-color: rgb(205, 205, 205);
+}
 .container{
     width: 580px;
     height: 400px;
@@ -116,5 +127,40 @@ body{
     font-size: 14px;
 }
 .btn3{
-    
+    background-color: #04aa6d;
+    color: #fff;
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
+    margin: 15px;
+    text-align: center;
+    padding-top: 8px ;
+}
+.btn3:hover{
+    background-color: #04774d;
+}
+.header .right i{
+    padding: 0 10px ;
+    margin-top: 25px;
+    left: 0;
+}
+.right ul{
+    list-style-type: none;
+}
+.right li{
+    display: inline-block;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 15px;
+}
+.btn4{
+    width:100px;
+    height: 40px;
+    background-color: #04aa6d;
+    color: #fff;
+    border-radius: 25px;
+    text-align: center;
+}
+.btn4:hover{
+    background-color: #04774d;
 }
